# students-to-workshops

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  test.py  test_mapping.py
data/: mapping.csv  students.csv  workshops.csv
